modules/main/default/objects/AdoptionApplication__c/AdoptionApplication__c.object-meta.xml
<CustomObject>
    <description>Holds the information entered by a contact when they apply to adopt a pet.</description>
    <label>Adoption Application</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Application</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Adoptions Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>