modules/main/default/objects/AdoptionApplication__c/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the applicant contact</description>
    <label>Applicant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Adoption Applications</relationshipLabel>
    <relationshipName>AdoptionApplications</relationshipName>
    <type>Lookup</type>
</CustomField>