modules/main/default/objects/AdoptionApplication__c/fields/PreferredBreed__c.field-meta.xml
<CustomField>
    <fullName>PreferredBreed__c</fullName>
    <label>Preferred Breed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cat</fullName>
            </value>
            <value>
                <fullName>Cat Longhair</fullName>
            </value>
            <value>
                <fullName>Dog</fullName>
            </value>
            <value>
                <fullName>Dog Big Dog</fullName>
            </value>
            <value>
                <fullName>Fish</fullName>
            </value>
            <value>
                <fullName>Turtle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>