modules/main/default/objects/AdoptionApplication__c/fields/PreferredSize__c.field-meta.xml
<CustomField>
    <fullName>PreferredSize__c</fullName>
    <label>Preferred Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Small</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Large</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>