modules/main/default/objects/AdoptionApplication__c/fields/SpecialNeedsAccepted__c.field-meta.xml
<CustomField>
    <fullName>SpecialNeedsAccepted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Special Needs Accepted</label>
    <type>Checkbox</type>
</CustomField>