modules/main/default/objects/AdoptionApplication__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Pending Match</fullName>
            </value>
            <value>
                <fullName>Matched</fullName>
            </value>
            <value>
                <fullName>Finalized</fullName>
            </value>
            <value>
                <fullName>Refused</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>