modules/main/default/objects/AdoptionApplication__c/listViews/AllApplications.listView-meta.xml
<ListView>
    <fullName>AllApplications</fullName>
    <columns>NAME</columns>
    <columns>Applicant__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>PreferredBreed__c</columns>
    <columns>PreferredSize__c</columns>
    <columns>SpecialNeedsAccepted__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>All Applications</label>
</ListView>